--- a/index.html
+++ b/index.html
@@ -34,23 +34,19 @@
                 <h2>我的书架</h2>
                 <div class="card-grid">
                     <div class="card">
-                        <div class="card-image">
-                            <img src="images/santi.jpg" alt="三体封面">
-                        </div>
+
                         <div class="card-content">
                             <h3>三体</h3>
                             <p>作者：刘慈欣</p>
-                            <p>一部震撼人心的科幻巨作，将人类文明与宇宙文明的交互娓娓道来。</p>
+                            <p>宏大的科幻史诗，探讨人性与文明的终极命运。</p>
                         </div>
                     </div>
                     <div class="card">
-                        <div class="card-image">
-                            <img src="images/hundred-years.jpg" alt="百年孤独封面">
-                        </div>
+
                         <div class="card-content">
                             <h3>百年孤独</h3>
                             <p>作者：加西亚·马尔克斯</p>
-                            <p>魔幻现实主义的代表作，讲述布恩迪亚家族七代人的传奇故事。</p>
+                            <p>魔幻现实主义的经典之作，讲述布恩迪亚家族的百年传奇。</p>
                         </div>
                     </div>
                 </div>
@@ -62,23 +58,19 @@
                 <h2>影视推荐</h2>
                 <div class="card-grid">
                     <div class="card">
-                        <div class="card-image">
-                            <img src="images/shawshank.jpg" alt="肖申克的救赎海报">
-                        </div>
+
                         <div class="card-content">
                             <h3>肖申克的救赎</h3>
                             <p>导演：弗兰克·德拉邦特</p>
-                            <p>一部关于希望的故事，展现了人性的光辉和对自由的渴望。</p>
+                            <p>一部关于希望的故事，展现人性的光辉。</p>
                         </div>
                     </div>
                     <div class="card">
-                        <div class="card-image">
-                            <img src="images/breaking-bad.jpg" alt="绝命毒师海报">
-                        </div>
+
                         <div class="card-content">
                             <h3>绝命毒师</h3>
-                            <p>创作者：文斯·吉利根</p>
-                            <p>一部极具张力的电视剧，展现了一个普通人的道德沦丧过程。</p>
+                            <p>主演：布莱恩·科兰斯顿</p>
+                            <p>一部极具张力的犯罪剧情片，展现人性的复杂。</p>
                         </div>
                     </div>
                 </div>
@@ -90,19 +82,15 @@
                 <h2>音乐分享</h2>
                 <div class="card-grid">
                     <div class="card">
-                        <div class="card-image">
-                            <img src="images/qingtian.jpg" alt="晴天专辑封面">
-                        </div>
+
                         <div class="card-content">
                             <h3>晴天</h3>
                             <p>歌手：周杰伦</p>
-                            <p>一首充满青春回忆的经典作品，旋律优美，歌词意境深远。</p>
+                            <p>青春回忆里的经典情歌。</p>
                         </div>
                     </div>
                     <div class="card">
-                        <div class="card-image">
-                            <img src="images/beyond.jpg" alt="海阔天空专辑封面">
-                        </div>
+
                         <div class="card-content">
                             <h3>海阔天空</h3>
                             <p>歌手：Beyond</p>
