--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>钟瑞 | 统计学本科生</title>
+    <title>RuiaaZ-Page</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+	<link rel="icon" href="logo.png" type="image/png">
 </head>
 <body>
     <!-- 装饰云朵 -->
