--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>你好，我是<span>钟瑞</span><br>
-				<h2>Hello, I'm <span>Ray Zhong</span></h2></h1>
+				Hello, I'm <span>Ray Zhong</span></h1>
                 <p>用喜欢的事，填满生活<br>
 				Fill your life with the things you love</p>
                 <p>“生活总要有大大小小的热爱，按自己的节奏做喜欢的事，保持热爱，总会有很多瞬间告诉你——生活温柔且浪漫。”<br>
